--- a/src/app/components/folders/folders.component.html
+++ b/src/app/components/folders/folders.component.html
@@ -14,7 +14,7 @@
               >Edit</i
             >
             <i
-              class="bi bi-trash text-danger w-25"
+              class="bi bi-trash text-danger w-25 pointer"
               (click)="userWantsToDeleteFolder(folder.id)"
               >Delete</i
             >
@@ -46,7 +46,7 @@
       </button>
     </div>
     <div *ngIf="showCreateFolderErrorMsg" class="form-text text-danger">
-      This field is required
+      Name must exist and have at least 3 characters.
     </div>
   </div>
 </div>
