--- a/src/app/components/no-folders/no-folders.component.html
+++ b/src/app/components/no-folders/no-folders.component.html
@@ -24,7 +24,7 @@
       </button>
     </div>
     <div *ngIf="showCreateFolderErrorMsg" class="form-text text-danger">
-      This field is required
+      Name must exist and have at least 3 characters.
     </div>
   </div>
 </div>
