--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,49 @@
-<p>tasks works!</p>
+<div class="card">
+  <div class="card-body">
+    <ul class="list-unstyled">
+      <li *ngFor="let todo of todos">
+        <div class="input-group mb-3 w100">
+          <div class="w-100 d-flex flex-row justify-content-between">
+            <i class="bi bi-archive w-25">{{ todo.name }}</i>
+            <i
+              class="bi bi-pencil-square pointer w-25"
+              (click)="userWantsToEditTodo(todo.id, todo.name)"
+              >Edit</i
+            >
+            <i
+              class="bi bi-trash text-danger w-25"
+              (click)="userWantsToDeleteTodo(todo.id)"
+              >Delete</i
+            >
+          </div>
+        </div>
+        <hr />
+      </li>
+    </ul>
+  </div>
+  <div class="card-footer">
+    <div class="input-group mb-3">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Todo name"
+        aria-label="Todo name"
+        aria-describedby="button-addon2"
+        (keyup.enter)="submitTodoButton.click()"
+        #createTodoInput
+      />
+      <button
+        class="btn btn-outline-success"
+        type="submit"
+        id="button-addon2"
+        (click)="userWantsToCreateTodo(createTodoInput.value)"
+        #submitTodoButton
+      >
+        Create
+      </button>
+    </div>
+    <div *ngIf="showCreateTodoErrorMsg" class="form-text text-danger">
+      Name must exist and have at least 3 characters.
+    </div>
+  </div>
+</div>
