splitted the functionality of deleting empty folders and folder with tasks

--- a/src/app/components/folders/folders.component.html
+++ b/src/app/components/folders/folders.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card animate__animated animate__fadeIn animate__faster">
   <div class="card-body">
     <ul class="list-unstyled">
       <li *ngFor="let folder of user.Folders">
