--- a/src/app/components/no-folders/no-folders.component.html
+++ b/src/app/components/no-folders/no-folders.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card animate__animated animate__fadeIn animate__faster">
   <div class="card-body">
     <p>Create your first folder and start organizing your time!</p>
   </div>
