--- a/src/app/components/no-tasks/no-tasks.component.html
+++ b/src/app/components/no-tasks/no-tasks.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card animate__animated animate__fadeIn animate__faster">
   <div class="card-body">
     <p>Create your first task!</p>
   </div>
