--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card animate__animated animate__fadeIn animate__faster">
   <div class="card-header">
     <h3 class="text-center">Register</h3>
   </div>
