--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
     <ng-template #folders>
       <app-folders
         [user]="user"
-        (onEdit)="editFolder($event)"
+        (onEditFolder)="editFolder($event)"
         (onViewMoreItems)="viewTasks($event)"
         (onCreateFolder)="createNewFolder($event)"
         (onDeleteFolder)="deleteFolder($event)"
